# quant-forecast-strategies

./: .gitignore  README.md  pyproject.toml
data/: fetch_real_data.py  fetch_real_data_simple.py  generate_sample_data.py
data/archived_data/: atm_iv_sample.csv
data/archived_data/duplicate_data_directory/: atm_iv_real.csv  spy.csv  spy_stooq.csv
src/multi_ts/: forecast.py
src/multi_ts/reporting/: plots.py  serialize.py  tables.py
tests/: test_cli_outputs.py  test_diagnostics.py  test_dm_synthetic.py  test_garch_constraints.py  test_iv_feature_plumbing.py  test_models_cv_shapes.py  test_strategy_caps_costs.py  test_stress_comprehensive.py
